tests/reference/run-array_03_cc-e368d39.stderr
semantic error: Rank mismatch in array reference: the array `a` has rank `1`, but is referenced as rank `2`
 --> tests/errors/array_03_cc.f90:5:1
  |
5 | a(:,:) = 1
  | ^^^^^^ 

semantic error: Rank mismatch in array reference: the array `a` has rank `1`, but is referenced as rank `2`
 --> tests/errors/array_03_cc.f90:6:1
  |
6 | a(:,:) = 2
  | ^^^^^^ 
